--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
@@ -15,6 +17,7 @@
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.3",
     "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "web-vitals": "^2.1.4"
   },
