--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^4.1.1",
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
+    "firebase": "^10.12.2",
     "framer-motion": "^11.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
