--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "emailjs-com": "^3.2.0",
     "firebase": "^10.12.2",
     "framer-motion": "^11.2.6",
+    "lucide-react": "^0.454.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
